# tanner-pagos

./: .gitignore  CLAUDE.md  README.md  index.html  run.sh  start.sh
backend/: docker-compose.yml  pyproject.toml
backend/backend/: settings.py  urls.py
backend/core/: admin.py  apps.py  choices.py  email_service.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/core/config/: docai_config.py  log_config.py
backend/core/gpc/: docai_service.py
backend/core/llm/: estructuras.py  openai_cantidad_pagos.py  openai_pago.py  openai_utils.py
backend/core/managers/: __init__.py  crmfila_manager.py  cuota_manager.py  requestcache_manager.py
backend/core/migrations/: 0001_initial.py  0002_remove_crmfila_credito_id.py  0003_crmfila_credito_id.py  0004_alter_crmfila_credito_id.py  0005_alter_crmfila_estado.py  0006_alter_crmfila_estado.py  0007_remove_crmfila_cuotas_remove_crmfila_monto.py  0008_cuota_estado.py  0009_alter_cuota_estado.py  0010_credito_nombre_deudor_alter_credito_rut_deudor.py  0011_credito_correo_deudor.py  0012_requestcache.py  0014_crmfila_canal_contacto.py  (+2 more)
backend/docs/: Aviso de transferencia de fondos recibida.eml  Aviso de transferencia de fondos.eml  Cartola 2250 - Junio.xlsx  La solicitud Recupero de castigo, del crédito 1874171 - SOLCOB-26501 fue rechazada el 30_06_2026.eml  La solicitud Recupero de castigo, del crédito 699802 - SOLCOB-26575 fue rechazada el 01_07_2026.eml  TUBO TANNER MAYO 2026-2.xlsx  [CHEQUE] ENVIO APLICACIÓN CHEQUE CRÉDITO  377498.eml  [CHEQUE] ENVIO APLICACIÓN CHEQUE CRÉDITO 1135346[2].eml
legacy/: app.js  (+1 more)
(+60 files in other folders)
