[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "google-cloud-storage>=3.13.0",
    "openai>=2.46.0",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
